--- a/build.gradle
+++ b/build.gradle
@@ -16,14 +16,13 @@ dependencies {
     compile "org.springframework:spring-core:${springframeworkVersion}"
     compile "org.springframework:spring-context:${springframeworkVersion}"
 
+    compile "org.springframework:spring-jdbc:${springframeworkVersion}"
+    compile "org.hsqldb:hsqldb:2.3.3"
+
     compile 'javax.inject:javax.inject:1'
     compile 'edu.washington.cs.types.checker:checker-framework:1.7.0'
-
-    compile 'javax.validation:validation-api:1.1.0.Final'
 
     testCompile "org.springframework:spring-test:${springframeworkVersion}"
     testCompile 'junit:junit:4.12'
     testCompile 'org.assertj:assertj-core:3.2.0'
-    testCompile 'pl.pragmatists:JUnitParams:1.0.4'
-    testCompile 'org.mockito:mockito-core:1.10.19'
 }
